@@ -1,3 +1,5 @@
+	* 18/09:
+	- created details window
 	* 16/09:
 	- improved IPC
 	* 14/09:
